# logos-core-poc

./: .cursorignore  .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  build_app_plugins.sh  build_core_modules.sh  build_core_plugins.sh  clean.sh  run.sh  run_app.sh  run_core.sh  run_custom_app.sh  run_waku_chat.sh
.github/workflows/: ci.yml
app/: CMakeLists.txt  Readme.md  chat_plugin.dylib  core_manager.cpp  core_manager.h  coremoduleview.cpp  dashboardview.h  main.cpp  mainwindow.cpp  mainwindow.h  mdichild.cpp  mdichild.h  mdiview.cpp  mdiview.h  modulesview.cpp  modulesview.h  resources.qrc  sidebarbutton.cpp  window.cpp  window.h
app/interfaces/: IComponent.h
app/ui/: coremoduleview.cpp  coremoduleview.h  dashboardview.cpp  mainwindow.cpp  mainwindow.h  mdiview.cpp  mdiview.h  modulesview.cpp  modulesview.h
core/: CMakeLists.txt  interface.h  plugin_registry.h
core/host/: CMakeLists.txt  core_manager.cpp  core_manager.h  core_manager_interface.h  logos_core.cpp  logos_core.h  main.cpp  metadata.json
examples/: CMakeLists.txt
examples/custom_app/: CMakeLists.txt  custom_app.cpp
examples/standalone_chat/: CMakeLists.txt  README.md  core_manager.cpp  core_manager.h  main.cpp  mainwindow.cpp  mainwindow.h  run_standalone_chat.sh
logos_app/app/: CMakeLists.txt  core_manager.cpp  main.cpp  window.cpp
logos_app/logos_dapps/chat_ui/: CMakeLists.txt  metadata.json
logos_app/logos_dapps/chat_ui/src/: ChatWidget.cpp  ChatWidget.h
logos_app/logos_dapps/colorchanger/: CMakeLists.txt  ColorChangerComponent.cpp  ColorChangerWidget.cpp  ColorChangerWidget.h
logos_app/logos_dapps/counter/: CMakeLists.txt  CounterComponent.h  CounterWidget.h
logos_app/logos_dapps/main_ui/: CMakeLists.txt
logos_app/logos_dapps/main_ui/src/: coremoduleview.cpp  coremoduleview.h  main_ui_plugin.cpp  mainwindow.cpp  mainwindow.h  modulesview.cpp  packagemanagerview.cpp  pluginmethodsview.cpp  pluginmethodsview.h  sidebarbutton.h
logos_app/logos_dapps/waku_ui/: CMakeLists.txt  WakuUIWidget.h  metadata.json
modules/: CMakeLists.txt
modules/calculator/: CMakeLists.txt  calculator_interface.h  calculator_plugin.cpp
modules/chat/: CMakeLists.txt  chat_plugin.cpp  chat_plugin.h
modules/chat/src/: chat_api.h
modules/chat/src/protocol/: protocol.h
modules/hello_world/: CMakeLists.txt  hello_world_interface.h  hello_world_plugin.cpp  hello_world_plugin.h
modules/waku/: CMakeLists.txt  waku.cpp
plugins/: CMakeLists.txt  build_waku_plugin.sh
plugins/calculator/: CMakeLists.txt  calculator_plugin.h  metadata.json
plugins/chat/: CMakeLists.txt  chat_interface.h  chat_plugin.h  metadata.json
plugins/chat/src/: chat_api.cpp  chat_api.h
plugins/chat/src/protobuf/: message.proto
plugins/hello_world/: CMakeLists.txt  metadata.json
plugins/waku/: CMakeLists.txt  build_libwaku.sh  metadata.json  waku.cpp  waku.h  waku_interface.h
plugins/waku/lib/: waku_plugin.h
plugins_app/chat_ui/: CMakeLists.txt  ChatUIComponent.cpp  ChatUIComponent.h  run.sh
plugins_app/chat_ui/src/: ChatWidget.h  ChatWindow.cpp  ChatWindow.h  main.cpp
plugins_app/colorchanger/: CMakeLists.txt  ColorChangerComponent.h  metadata.json
plugins_app/counter/: CMakeLists.txt  CounterComponent.cpp  CounterComponent.h  CounterWidget.cpp  metadata.json
plugins_app/main_ui/: CMakeLists.txt
plugins_app/main_ui/src/: coremoduleview.cpp  coremoduleview.h  main_ui_plugin.h  mainwindow.cpp  mainwindow.h  metadata.json  modulesgenericview.cpp  modulesgenericview.h  modulesview.cpp  modulesview.h  packagemanagerview.cpp  packagemanagerview.h  pluginmethodsview.cpp  pluginmethodsview.h
plugins_app/waku_ui/: CMakeLists.txt  WakuUIComponent.cpp  WakuUIComponent.h  WakuUIWidget.cpp  WakuUIWidget.h
